# artifacts/api-server/src/routes/index.ts
@@ -1,22 +1,22 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import studentsRouter from "./students";
-import modelsRouter from "./models";
 import predictionsRouter from "./predictions";
 import eligibilityRouter from "./eligibility";
 import careerSuggestionsRouter from "./careerSuggestions";
 import percentageGroupsRouter from "./percentageGroups";
 import dashboardRouter from "./dashboard";
+import resumeAnalysisRouter from "./resumeAnalysis";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(studentsRouter);
-router.use(modelsRouter);
 router.use(predictionsRouter);
 router.use(eligibilityRouter);
 router.use(careerSuggestionsRouter);
 router.use(percentageGroupsRouter);
 router.use(dashboardRouter);
+router.use(resumeAnalysisRouter);
 
 export default router;
