# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./predictions";
 export * from "./eligibility";
 export * from "./careerSuggestions";
 export * from "./percentageGroups";
+export * from "./resumeAnalysis";
